--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -2,12 +2,24 @@
 
   <header class="page-header">
     <h1>Order #<%= @order.id %></h1>
+    <%# <% byebug %>
   </header>
 
+  <div class="products">
+    <%= render @products %>
+  </div>
+
   <div class="order-summary jumbotron">
+    <h4></h4>
     <h4>Thank you for your order!</h4>
   </div>
 
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
 
 </section>
+<%# 
+The line items in the order and:
+Their image, name and description
+Their respective quantities and line item totals
+The final amount for the order
+The email that was used %>
