--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -2,16 +2,15 @@
 
   <header class="page-header">
     <h1>Order #<%= @order.id %></h1>
-    <%# <% byebug %>
   </header>
 
   <div class="products">
-    <%= render @products %>
+    <%= render :product %>
   </div>
 
   <div class="order-summary jumbotron">
     <h4></h4>
-    <h4>Thank you for your order!</h4>
+    <h4>Thank you for your order! <%= @order.email %></h4>
   </div>
 
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
