--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -4,8 +4,33 @@
     <h1>Order #<%= @order.id %></h1>
   </header>
 
-  <div class="products">
-    <%= render :product %>
+  <%# Cart Table %>
+  <div class="panel panel-default items">
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th colspan="2">Product</th>
+          <th>Item Price</th>
+          <th>Quantity</th>
+          <th>Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @order.line_items.each do |item| %>
+          <%= render 'line_item', product: item.product, quantity: item.quantity.to_i %>
+        <% end %>
+      </tbody>
+      <tfoot>
+        <tr>
+          <th colspan="4">
+            TOTAL:
+          </th>
+          <th>
+            <%= number_to_currency(@order.total_cents / 100.0) %>
+          </th>
+        </tr>
+      </tfoot>
+    </table>
   </div>
 
   <div class="order-summary jumbotron">
