--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,24 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<section class="admin-dashboard">
+
+  <header class="page-header">
+    <h1>Admin &raquo; Dashboard </h1>
+  </header>
+
+  <div class="panel panel-default products">
+
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th>Total Products</th>
+          <th>Total Categories</th>
+        </tr>
+        <tr>
+          <td> <%= @product_count %> </td>
+          <td> <%= @category_count %> </td>
+        </tr>
+      </thead>
+    </table>
+
+  </div>
+
+</section>
