initialize about controller, map route, add section to nav bar and create index.html.erb

--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -25,6 +25,11 @@
             <% end %>
           </ul>
         </li>
+        <li>
+        <%# Link to About, does not work yet %>
+        <%# "/about" %>
+          <%= link_to 'About', about_index_path %>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
        <li class="dropdown">
