--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -26,8 +26,7 @@
           </ul>
         </li>
         <li>
-        <%# Link to About, does not work yet %>
-        <%# "/about" %>
+        <%# Link to About%>
           <%= link_to 'About', about_index_path %>
         </li>
       </ul>
