correct categories controller and index.html.erb to properly point towards the right locations

--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -14,12 +14,10 @@
       <thead>
         <tr>
           <th colspan="2">Category</th>
-          <th>Number of Items</th>
-          <th></th>
         </tr>
       </thead>
       <tbody>
-        <%# <%= render @products %>
+        <%= render @categories %>
       </tbody>
     </table>
 
