--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,41 @@
-<h1>Signup!</h1>
+<section class="user-new-page">
 
-<%= form_for :user, url: '/users' do |f| %>
+  <header class="page-header">
+    <h1>User &raquo; Sign Up</h1>
+  </header>
 
-  First Name: <%= f.text_field :first_name %>
-  Last Name: <%= f.text_field :last_name %>
-  Email: <%= f.text_field :email %>
-  Password: <%= f.password_field :password %>
-  Password Confirmation: <%= f.password_field :password_confirmation %>
-  <%= f.submit "Submit" %>
+  <div class="row">
+    <div class="col-sm-6 col-sm-offset-1">
+      <%= form_for :user, url: '/users' do |form| %>
 
-<% end %>
+        <div class="form-group">
+          <%= form.label 'First Name' %>
+          <%= form.text_field :first_name, class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= form.label 'Last Name' %>
+          <%= form.text_field :last_name, class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= form.label 'Email' %>
+          <%= form.text_field :email, class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= form.label 'Password' %>
+          <%= form.password_field :password, class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
+          <%= form.label 'Password Confirmation' %>
+          <%= form.password_field :password_confirmation, class: 'form-control' %>
+        </div>
+
+        <%= form.submit 'Submit User', class: 'btn btn-primary' %>
+      <% end %>
+    </div>
+  </div>
+
+</section>
